components/groupedComponents/temp-shop/create/fontPicker/fontPicker.module.sass
@import 'styles/sass/colors'
@import 'styles/sass/variables'
@import 'styles/sass/mixins'

// Global styles
.fontContainerUnselected
  cursor: pointer
  //color: $buttonTextDisabled
  z-index: 10

//.fontContainerSelected
//  //border-bottom: 4px solid $primary
//  cursor: pointer
//  z-index: 10

.fontTitle
  color: $buttonTextDisabled
  text-transform: capitalize

// @media #{$desktop}
// @media #{$tablette}
// @media #{$mobile}

